# CoinCLI

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
public/: app.js  index.html  styles.css
src/: agent.js  api-server.js  cli.js  db.js  finance-tools.js  market-data.js  market-history-service.js  recurring-investments.js  recurring-ledger-scheduler.js  run-recurring-investments.js  run-recurring-ledger.js  wealth-service.js
test/: api-server.test.js  market-data.test.js  market-history-service.test.js  wealth-service.test.js
wealth_cli/: __init__.py  __main__.py  app.py  database.py  streamlit_app.py
wealth_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
