[project]
name = "wealth-cli"
version = "0.1.0"
description = "Terminal-first bookkeeping and investment tracking CLI."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.scripts]
wealth = "wealth_cli.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["wealth_cli"]
